force-app/main/default/objects/Plan_Amendment__c/Plan_Amendment__c.object-meta.xml
<CustomObject>
    <label>Plan Amendment</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Plan Amendment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>