force-app/main/default/objects/Plan_Amendment__c/fields/Amendment_Status__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Status__c</fullName>
    <label>Amendment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Upgrade Review</fullName>
            </value>
            <value>
                <fullName>NIGO (Reviewing w/ Client)</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending Future Amendment Date</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Amendment Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>