force-app/main/default/objects/Plan_Amendment__c/fields/Auto_Enrollment_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enrollment_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Enrollment Amendment</label>
    <type>Checkbox</type>
</CustomField>