force-app/main/default/objects/Plan_Amendment__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category will create case when Amendment is completed: Plan Information Update to A&amp;F, Payroll, and R&amp;W - Plan Source Update to Payroll</description>
    <inlineHelpText>Category will create case when Amendment is completed: Plan Information Update to A&amp;F, Payroll, and R&amp;W - Plan Source Update to Payroll</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan Information Update</fullName>
            </value>
            <value>
                <fullName>Plan Source Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>