force-app/main/default/objects/Plan_Amendment__c/fields/Compensation_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compensation Amendment</label>
    <type>Checkbox</type>
</CustomField>