force-app/main/default/objects/Plan_Amendment__c/fields/Distribution_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distribution Amendment</label>
    <type>Checkbox</type>
</CustomField>