force-app/main/default/objects/Plan_Amendment__c/fields/Eligibility_Entry_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Entry_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligibility/Entry Amendment</label>
    <type>Checkbox</type>
</CustomField>