force-app/main/default/objects/Plan_Amendment__c/fields/Exception_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Exception_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Amendment</label>
    <type>Checkbox</type>
</CustomField>