force-app/main/default/objects/Plan_Amendment__c/fields/Loan_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Amendment</label>
    <type>Checkbox</type>
</CustomField>