force-app/main/default/objects/Plan_Amendment__c/fields/Money_Sources_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Money_Sources_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Money Sources Amendment</label>
    <type>Checkbox</type>
</CustomField>