force-app/main/default/objects/Plan_Amendment__c/fields/Next_Year_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Next_Year_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the requested amendment won&apos;t go into effect until next year</description>
    <inlineHelpText>Check this box if the requested amendment won&apos;t go into effect until next year</inlineHelpText>
    <label>Next Year Amendment</label>
    <type>Checkbox</type>
</CustomField>