force-app/main/default/objects/Plan_Amendment__c/fields/Other_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Other_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Amendment</label>
    <type>Checkbox</type>
</CustomField>