force-app/main/default/objects/Plan_Amendment__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Plan Amendments</relationshipLabel>
    <relationshipName>Plan_Amendments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>