force-app/main/default/objects/Plan_Amendment__c/fields/Plan_EIN__c.field-meta.xml
<CustomField>
    <fullName>Plan_EIN__c</fullName>
    <formula>Plan__r.Employer_Identification_Number_EIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>EIN from the linked Plan record.</inlineHelpText>
    <label>Plan EIN</label>
    <type>Text</type>
</CustomField>