force-app/main/default/objects/Plan_Amendment__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <formula>TEXT( Plan__r.Plan_Type1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Type</label>
    <type>Text</type>
</CustomField>