force-app/main/default/objects/Plan_Amendment__c/fields/Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Request_Details__c</fullName>
    <inlineHelpText>This field will be filled out by combining all of the client&apos;s answers in the Jotform to give Compliance team the actions they need to take to update the plan.</inlineHelpText>
    <label>Request Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>