force-app/main/default/objects/Plan_Amendment__c/fields/Safe_Harbor_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safe Harbor Amendment</label>
    <type>Checkbox</type>
</CustomField>