force-app/main/default/objects/Plan_Amendment__c/fields/Service_Option__c.field-meta.xml
<CustomField>
    <fullName>Service_Option__c</fullName>
    <formula>TEXT(Plan__r.Service_Option__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Option</label>
    <type>Text</type>
</CustomField>