force-app/main/default/objects/Plan_Amendment__c/fields/Ubiquity_Plan_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Ubiquity_Plan_Effective_Date__c</fullName>
    <formula>Plan__r.Ubiquity_Plan_Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ubiquity Plan Effective Date</label>
    <type>Date</type>
</CustomField>