force-app/main/default/objects/Plan_Amendment__c/fields/Vesting_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Vesting_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vesting Amendment</label>
    <type>Checkbox</type>
</CustomField>